# libcopl

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  indent.sh
libcop/: Doxyfile  Makefile.am  Makefile.in
libcop/doc/: cop_asym_crypto.3  cop_asym_crypto_async.3  cop_cache.3  cop_comp.3  cop_data_move.3  cop_data_move_async.3  cop_malloc.3  cop_manage.3  cop_rand.3  cop_regx.3  cop_session.3  cop_sym_crypto.3  cop_sym_crypto_async.3  libcop.3  libcopcache.3  libcopmalloc.3  libcopmanage.3
libcop/include/: config.h.in  cop_debug.h  libcop.h  libcopcache.h  libcopmalloc.h  libcopmanage.h
libcop/lib/: Makefile.am  Makefile.in  bignumber.c  cop_base.c  cop_cache.h  cop_cache_setup.c  cop_dispatch.c  cop_malloc.c  cop_map_node.c  cop_map_node.h  cop_map_tree.c  cop_map_tree.h  cop_open.c  cop_pool.c  cop_session.c  cop_tls_cache.c  deq.c  deq.h
libcop/lib/cop/: adm.c  asym.c  comp.c  regx.c  rnd.c  sym.c
libcop/test/: Makefile.am  Makefile.in  admtest001.c  admtest002.c  admtest003.c  admtest004.c  admtest005.c  admtest006.c  admtest007.c  asymtest001.c  asymtest002.c  asymtest003.c  asymtest004.c  asymtest005.c  asymtest006.c  bntest001.c  ciphertest001.c  comptest003.c  comptest004.c  comptest007.c  comptest008.c  comptest010.c  comptest015.c  comptest016.c  comptest017.c  comptest018.c  comptest019.c  err001.c  err002.c  exists001.c  exists002.c  exists003.c  forktest001.c  forktest002.c  hashtest001.c  hashtest002.c  hashtest003.c  hashtest004.c  hmactest001.c  mmutest001.c  (+56 more)
libcop/test/data/: symdata.h
libcopl/: Doxyfile  Makefile.in
libcopl/include/: config.h.in  libcopl.h
libcopl/include/libcopl/: adm.h  asym.h  comp.h  cop.h  cop_err.h  cop_sys.h  cop_util.h  crypto.h  icswx.h  icswx_util.h  regx.h  rnd.h  waitm.h
libcopl/include/libcopl/comp/: deflate.h  gzip.h  zlib.h
libcopl/include/libcopl/crypto/: aes.h  aes_hmac.h  des.h  ecc.h  hash.h  hash_ex.h  hmac.h  imf.h  kasumi.h  rc4.h  tdes_hmac.h
libcopl/lib/: Makefile.am  Makefile.in  cop_asym.c  cop_err.c  cop_sys.c  cop_util.c
libcopl/samples/: Makefile.am  Makefile.in  simple_adm.c  simple_aes.c
libcopl/test/: Makefile.am  Makefile.in  adm_memcpy.c  aes.c  all_headers.c  all_headers.cpp  des.c  gzip.c  hash.c
libcopl/test/perf/: Makefile.am  Makefile.in  PMUCtrl.c  aes_mt.c  aeshmacsha1_mt.c  aeshmacsha256_mt.c  aeshmacsha512_mt.c  affinity.h  arc4_mt.c  bma2libcopl.h  des_mt.c  gzip_decomp_perf.c  hmacsha1_mt.c  hmacsha256_mt.c  hmacsha512_mt.c  kasumi_f9_mt.c  md5_mt.c  perfTest.c  run_gzip.sh  sha1_mt.c  sha256_mt.c  sha512_mt.c  tdes_mt.c  tdeshmacsha1_mt.c  tdeshmacsha256_mt.c  tdeshmacsha512_mt.c  threads_posix.h
libcopl/tools/: make_asymcrypto.py  make_symcrypto.py  rc_encode.csv  sym_setup_def.csv  sym_structs_def.csv
