AC_INIT([libcop],[0.11.0],[])
AC_CONFIG_SRCDIR([libcop])
AM_INIT_AUTOMAKE
LT_INIT
AC_CONFIG_HEADERS(libcop/include/config.h libcopl/include/config.h)
LT_INIT
AC_PROG_CC
AC_PROG_CXX

AM_INIT_AUTOMAKE([foreign])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_ARG_WITH(libsph,
	[AS_HELP_STRING([--with-libsph],[utilize libsph as the memory allocator])],
	[AC_DEFINE([USE_LIBSPH], [1], [use libsph as allocator])],[])

AC_ARG_WITH(DD1,
	[AS_HELP_STRING([--with-DD1],[build with known DD1 work arounds])],
	[AC_DEFINE([USE_DD1], [1], [use DD1 work arounds])],[])

AC_ARG_ENABLE(reentrant,
    [AS_HELP_STRING([--disable-reentrant],[disable library from being threaded])],
    [AC_DEFINE([REENTRANT_ON],[0], [builds with locks])],
	[AC_DEFINE([REENTRANT_ON], [1])])

AC_ARG_ENABLE(debug,
	[AS_HELP_STRING([--enable-debug],[build with debugging information])],
	[AC_DEFINE([DEBUG_ON], [1], [build debugging info])
	 CFLAGS="${CFLAGS} -g -O0"],	# debug on
	[CFLAGS="${CFLAGS} -O2"])	# debug off

AC_ARG_ENABLE(verbose,
	[AS_HELP_STRING([--enable-verbose],[library prints verbose output])],
	[AC_DEFINE([VERBOSE_ON], [1], [print verbose output])],[])

AC_ARG_ENABLE(openssl,
    [AS_HELP_STRING([--disable-openssl],[disable openssl in testcases])],
    [AC_DEFINE([OPENSSL_ON],[1], [enable openssl in testcases])
	 AM_CONDITIONAL(OPENSSL_ON, false)],
	[AM_CONDITIONAL(OPENSSL_ON, true)])

AC_ARG_ENABLE(perf,
    [AS_HELP_STRING([--enable-perf],[enable papi/pfm in testcases])],
    [AC_DEFINE([PERF_ON],[1], [enable papi/pfm in testcases])
	 AM_CONDITIONAL(PERF_ON, true)],
	[AM_CONDITIONAL(PERF_ON, false)])

AC_ARG_ENABLE(regx-support,
    [AS_HELP_STRING([--enable-regx-support],[enable support for the regx coprocessor])],
    [AC_DEFINE([REGX_SUPPORT],[1], [enable regx cop])
	 AM_CONDITIONAL(REGX_SUPPORT, true)],
	[AM_CONDITIONAL(REGX_SUPPORT, false)])

AC_SUBST(CFLAGS)
AC_CONFIG_FILES([
	Makefile
	libcop/Makefile
	libcop/lib/Makefile
	libcop/test/Makefile
	libcopl/Makefile
	libcopl/lib/Makefile
	libcopl/test/Makefile
	libcopl/test/perf/Makefile
	libcopl/samples/Makefile])
AC_OUTPUT
