man_MANS = \
	doc/cop_asym_crypto.3 \
	doc/cop_asym_crypto_async.3 \
	doc/cop_cache.3 \
	doc/cop_comp.3 \
	doc/cop_data_move.3 \
	doc/cop_data_move_async.3 \
	doc/cop_malloc.3 \
	doc/cop_manage.3 \
	doc/cop_rand.3 \
	doc/cop_regx.3 \
	doc/cop_session.3 \
	doc/cop_sym_crypto.3 \
	doc/cop_sym_crypto_async.3 \
	doc/libcop.3 \
	doc/libcopcache.3 \
	doc/libcopmalloc.3 \
	doc/libcopmanage.3

SUBDIRS = lib test
